# MeshCoreQt

./: .gitignore  AGENTS.md  BLE_MACOS_NOTES.md  CMakeLists.txt  Info.plist  README.md  main.cpp  vcpkg.json
.beads/: issues.jsonl
src/connection/: BLEConnection.cpp  BLEConnection.h  ConnectionState.h  IConnection.h  SerialConnection.cpp  SerialConnection.h
src/core/: ChannelManager.cpp  ChannelManager.h  DeviceInfo.h  MeshClient.cpp  MeshClient.h  RadioPresets.h
src/models/: Channel.cpp  Channel.h  Contact.cpp  Contact.h  Message.cpp  Message.h
src/protocol/: CommandBuilder.cpp  CommandBuilder.h  ProtocolConstants.h  ResponseParser.cpp  ResponseParser.h
src/storage/: DatabaseManager.cpp  DatabaseManager.h  SettingsManager.cpp  SettingsManager.h
src/ui/CLI/: CommandLineInterface.cpp  CommandLineInterface.h
